--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,10 @@
         <artifactId>aspectjweaver</artifactId>
         <version>1.7.0</version>
     </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
